--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,6 +4,7 @@ builds:
   main: .
   env:
   - GO_PKG=github.com/exoscale/cert-manager-webhook-exoscale
+  - CGO_ENABLED=0
   flags:
   - -trimpath
   ldflags:
