https://github.com/cert-manager/webhook-example/pull/39

--- a/deploy/exoscale-webhook/templates/deployment.yaml
+++ b/deploy/exoscale-webhook/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
