--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,18 +29,5 @@ dockers:
   - --build-arg="VCS_REF={{.ShortCommit}}"
   - --build-arg="BUILD_DATE={{.Date}}"
 
-signs:
-- cmd: gpg
-  args: ["--default-key", "7100E8BFD6199CE0374CB7F003686F8CDE378D41", "--detach-sign", "${artifact}"]
-  artifacts: all
-
-checksum:
-  name_template: 'checksums.txt'
-
-snapshot:
-  name_template: "{{ .Tag }}-snapshot"
-
 release:
-  github:
-    owner: exoscale
-    name: cert-manager-webhook-exoscale
+  disable: true
