--- a/deploy/exoscale-webhook/templates/apiservice.yaml
+++ b/deploy/exoscale-webhook/templates/apiservice.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
@@ -8,6 +9,9 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
+    {{- with .Values.annotations }}
+{{- toYaml . | nindent 4 }}
+    {{- end }}
     cert-manager.io/inject-ca-from: "{{ .Release.Namespace }}/{{ include "exoscale-webhook.servingCertificate" . }}"
 spec:
   group: {{ .Values.groupName }}
