--- a/deploy/exoscale-webhook/templates/deployment.yaml
+++ b/deploy/exoscale-webhook/templates/deployment.yaml
@@ -1,8 +1,13 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
