--- a/deploy/exoscale-webhook/templates/rbac.yaml
+++ b/deploy/exoscale-webhook/templates/rbac.yaml
@@ -1,8 +1,13 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -17,6 +22,10 @@ kind: RoleBinding
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:webhook-authentication-reader
   namespace: kube-system
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -38,6 +47,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:auth-delegator
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -58,6 +71,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:domain-solver
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -75,6 +92,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:domain-solver
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -96,6 +117,10 @@ kind: Role
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:secrets-reader
   namespace: {{ .Release.Namespace }}
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
@@ -115,6 +140,10 @@ kind: RoleBinding
 metadata:
   name: {{ include "exoscale-webhook.fullname" . }}:secrets-reader
   namespace: {{ .Release.Namespace }}
+  {{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ include "exoscale-webhook.name" . }}
     chart: {{ include "exoscale-webhook.chart" . }}
