--- a/deploy/exoscale-webhook/values.yaml
+++ b/deploy/exoscale-webhook/values.yaml
@@ -25,6 +25,7 @@ service:
   type: ClusterIP
   port: 443
 
+annotations: {}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
