--- a/deploy/exoscale-webhook/Chart.yaml
+++ b/deploy/exoscale-webhook/Chart.yaml
@@ -2,5 +2,5 @@
 apiVersion: v1
 appVersion: "v0.3.2"
 description: Cert manager webhook for Exoscale
-name: exoscale-webhook
+name: cert-manager-webhook-exoscale
 version: 0.3.2
