--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
 
 jobs:
-  publish:
+  horeleaser:
     runs-on: ubuntu-latest
 
     permissions:
@@ -19,18 +19,8 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Extract version from tag
-        id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
       - run: make go.mk
         shell: bash
-
-      - name: Set up Helm
-        uses: azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4 #v4.3.1
-
-      - name: Package chart
-        run: helm package deploy/exoscale-webhook
 
       - name: Import GPG key
         # This is a third-party GitHub action and we trust it with our GPG key.
@@ -48,11 +38,34 @@ jobs:
           registry_username: ${{ secrets.DOCKERHUB_USERNAME }}
           registry_password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Login to DockerHub
+  publish-chart:
+    runs-on: ubuntu-latest
+    needs: goreleaser
+
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 #v4.3.1
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
+      - name: Set up Helm
+        uses: azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4 #v4.3.1
+
+      - name: Package chart
+        run: helm package deploy/exoscale-webhook
+
+      - name: Extract version from tag
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Login to DockerHub with helm
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | helm registry login registry-1.docker.io -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
       - name: Push chart
-        run: helm push cert-manager-webhook-exoscale-${VERSION}.tgz oci://registry-1.docker.io/exoscale
+        run: helm push cert-manager-webhook-exoscale-chart-${VERSION}.tgz oci://registry-1.docker.io/exoscale
         env:
           VERSION: ${{ steps.version.outputs.version }}
 
